@@ -34,6 +34,7 @@ import org.energy_home.jemma.javagal.layers.business.Utils;
 import org.energy_home.jemma.javagal.layers.data.implementations.SerialPortConnectorJssc;
 import org.energy_home.jemma.javagal.layers.data.implementations.SerialPortConnectorRxTx;
 import org.energy_home.jemma.javagal.layers.data.implementations.Utils.DataManipulation;
+import org.energy_home.jemma.javagal.layers.data.implementations.Utils.Hex;
 import org.energy_home.jemma.javagal.layers.data.interfaces.IConnector;
 import org.energy_home.jemma.javagal.layers.data.interfaces.IDataLayer;
 import org.energy_home.jemma.javagal.layers.object.ByteArrayObject;
@@ -146,6 +147,9 @@ public class DataFreescale implements IDataLayer {
 		if (!foundSerialLib) {
 			throw new Exception("Error not found Rxtx or Jssc serial connector library");
 		}
+		
+		RS232Filter.create(dongleRs232);
+		
 		INTERNAL_TIMEOUT = getGal().getPropertiesManager().getCommandTimeoutMS();
 		executor = Executors.newFixedThreadPool(getGal().getPropertiesManager().getNumberOfThreadForAnyPool(), new ThreadFactory() {
 
@@ -555,26 +559,26 @@ public class DataFreescale implements IDataLayer {
 
 			break;
 		case 0x01:
-
+			
 			LOG.debug("Extracted ZDO-NetworkState.Event: DeviceinNetworkDiscoveryState (Device in Network Discovery State)");
 
 			break;
 		case 0x02:
-
+			
 			LOG.debug("Extracted ZDO-NetworkState.Event: DeviceJoinNetworkstate (Device Join Network state)");
-
+			
 			break;
 		case 0x03:
-
+			
 			LOG.debug("Extracted ZDO-NetworkState.Event: DeviceinCoordinatorstartingstate (Device in Coordinator starting state)");
-
+			
 			getGal().setGatewayStatus(GatewayStatus.GW_STARTING);
 			break;
 		case 0x04:
 			getGal().setGatewayStatus(GatewayStatus.GW_RUNNING);
-
+			
 			LOG.debug("ZDO-NetworkState.Event: DeviceinRouterRunningstate (Device in Router Running state)");
-
+			
 			break;
 		case 0x05:
 			getGal().setGatewayStatus(GatewayStatus.GW_RUNNING);
@@ -582,24 +586,24 @@ public class DataFreescale implements IDataLayer {
 
 			break;
 		case 0x09:
-
+			
 			LOG.debug("Extracted ZDO-NetworkState.Event: Deviceinleavenetworkstate (Device in leave network state)");
 
 			getGal().setGatewayStatus(GatewayStatus.GW_STOPPING);
 			break;
 		case 0x0A:
-
+			
 			LOG.debug("Extracted ZDO-NetworkState.Event: Deviceinauthenticationstate (Device in authentication state)");
 
 			break;
 		case 0x0B:
-
+			
 			LOG.debug("Extracted ZDO-NetworkState.Event: Deviceinstoppedstate (Device in stopped state)");
 			getGal().setGatewayStatus(GatewayStatus.GW_STOPPED);
 
 			break;
 		case 0x0C:
-
+			
 			LOG.debug("Extracted ZDO-NetworkState.Event: DeviceinOrphanjoinstate (Device in Orphan join state)");
 			break;
 		case 0x10:
@@ -608,18 +612,18 @@ public class DataFreescale implements IDataLayer {
 			LOG.debug("ZDO-NetworkState.Event: DeviceinCoordinatorRunningstate (Device is Coordinator Running state)");
 			break;
 		case 0x11:
-
+			
 			LOG.debug("Extracted ZDO-NetworkState.Event: DeviceinKeytransferstate (Device in Key transfer state)");
 			break;
 		case 0x12:
-
+			
 			LOG.debug("Extracted ZDO-NetworkState.Event: Deviceinauthenticationstate (Device in authentication state)");
-
+			
 			break;
 		case 0x13:
-
+			
 			LOG.debug("Extracted ZDO-NetworkState.Event: DeviceOfftheNetwork (Device Off the Network)");
-
+			
 			break;
 		default:
 			throw new Exception("ZDO-NetworkState.Event: Invalid Status - " + _status);
@@ -634,63 +638,63 @@ public class DataFreescale implements IDataLayer {
 		short _status = (short) (message.getArray()[8] & 0xFF);
 		switch (_status) {
 		case 0x00:
-
+			
 			LOG.debug("Extracted NLME-JOIN.Confirm: SUCCESS (Joined the network)");
 			break;
 		case 0xC2:
-
+			
 			LOG.debug("Extracted NLME-JOIN.Confirm: INVALID_REQUEST (Not Valid Request)");
 			break;
 		case 0xC3:
-
+			
 			LOG.debug("Extracted NLME-JOIN.Confirm: NOT_PERMITTED (Not allowed to join the network)");
-
+			
 			break;
 		case 0xCA:
-
+			
 			LOG.debug("Extracted NLME-JOIN.Confirm: NO_NETWORKS (Network not found)");
 			break;
 		case 0x01:
-
+			
 			LOG.debug("Extracted NLME-JOIN.Confirm: PAN_AT_CAPACITY (PAN at capacity)");
-
+			
 			break;
 		case 0x02:
-
+			
 			LOG.debug("Extracted NLME-JOIN.Confirm: PAN_ACCESS_DENIED (PAN access denied)");
-
+			
 			break;
 		case 0xE1:
-
+			
 			LOG.debug("Extracted NLME-JOIN.Confirm: CHANNEL_ACCESS_FAILURE (Transmission failed due to activity on the channel)");
 			break;
 		case 0xE4:
-
+			
 			LOG.debug("Extracted NLME-JOIN.Confirm: FAILED_SECURITY_CHECK (The received frame failed security check)");
 			break;
 		case 0xE8:
-
+			
 			LOG.debug("Extracted NLME-JOIN.Confirm: INVALID_PARAMETER (A parameter in the primitive is out of the valid range)");
 			break;
 		case 0xE9:
-
+			
 			LOG.debug("Extracted NLME-JOIN.Confirm: NO_ACK (Acknowledgement was not received)");
-
+			
 			break;
 		case 0xEB:
-
+			
 			LOG.debug("Extracted NLME-JOIN.Confirm: NO_DATA (No response data was available following a request)");
-
+			
 			break;
 		case 0xF3:
-
+			
 			LOG.debug("Extracted NLME-JOIN.Confirm: UNAVAILABLE_KEY (The appropriate key is not available in the ACL)");
-
+			
 			break;
 		case 0xEA:
-
+			
 			LOG.debug("Extracted NLME-JOIN.Confirm: NO_BEACON (No Networks)");
-
+			
 			break;
 		default:
 			throw new Exception("Extracted NLME-JOIN.Confirm: Invalid Status - " + _status);
@@ -810,7 +814,7 @@ public class DataFreescale implements IDataLayer {
 	 * @param message
 	 */
 	private void apsmeSetConfirm(ByteArrayObject message) {
-
+		
 		LOG.debug("Extracted APSME-SET.Confirm: {}", message.ToHexString());
 
 		short status = (short) (message.getArray()[3] & 0xFF);
@@ -970,7 +974,7 @@ public class DataFreescale implements IDataLayer {
 		synchronized (getListLocker()) {
 			for (ParserLocker pl : getListLocker()) {
 				if ((pl.getType() == TypeMessage.NODE_DESCRIPTOR) && (pl.getStatus().getCode() == ParserLocker.INVALID_ID) && (pl.get_Key().equalsIgnoreCase(_key))) {
-					LOG.debug("@Extracted ZDP-NodeDescriptor.Response: {} -- KEY: {} ", message.ToHexString(), _key);
+					LOG.debug("@Extracted ZDP-NodeDescriptor.Response: {} -- KEY: {} ",message.ToHexString() , _key);
 
 					pl.getStatus().setCode((short) (message.getArray()[3] & 0xFF));/* Status */
 					pl.set_objectOfResponse(_node);
@@ -1168,7 +1172,7 @@ public class DataFreescale implements IDataLayer {
 		String _Key = String.format("%02X", (message.getArray()[4] & 0xFF));
 		synchronized (getListLocker()) {
 			for (ParserLocker pl : getListLocker()) {
-				LOG.debug("NLME-GET.Confirm KEY: {} ---- {}", _Key, pl.get_Key());
+				LOG.debug("NLME-GET.Confirm KEY: {} ---- {}",_Key, pl.get_Key());
 				if ((pl.getType() == TypeMessage.NMLE_GET) && (pl.getStatus().getCode() == ParserLocker.INVALID_ID) && (pl.get_Key().equalsIgnoreCase(_Key))) {
 					short _Length = (short) DataManipulation.toIntFromShort(message.getArray()[9], message.getArray()[8]);
 					byte[] _res = DataManipulation.subByteArray(message.getArray(), 10, _Length + 9);
@@ -1244,24 +1248,24 @@ public class DataFreescale implements IDataLayer {
 				_node.getActiveEndpoints().add(_aep);
 
 			}
-
-			LOG.debug("ZDP-Active_EP_rsp.response status:00 - Success");
+			
+				LOG.debug("ZDP-Active_EP_rsp.response status:00 - Success");
 
 			break;
 		case 0x80:
-
-			LOG.debug("ZDP-Active_EP_rsp.response status:80 - Inv_RequestType");
+			
+				LOG.debug("ZDP-Active_EP_rsp.response status:80 - Inv_RequestType");
 
 			break;
 		case 0x89:
-
-			LOG.debug("ZDP-Active_EP_rsp.response status:89 - No_Descriptor");
+			
+				LOG.debug("ZDP-Active_EP_rsp.response status:89 - No_Descriptor");
 
 			break;
 		case 0x81:
-
-			LOG.debug("ZDP-Active_EP_rsp.response status:81 - Device_Not_found");
-
+			
+				LOG.debug("ZDP-Active_EP_rsp.response status:81 - Device_Not_found");
+			
 			break;
 		}
 		// Found ZDP-Active_EP_rsp.response. Remove the lock
@@ -1296,7 +1300,8 @@ public class DataFreescale implements IDataLayer {
 
 		String Key = String.format("%04X", shortAddress);
 
-		BigInteger _bi = BigInteger.valueOf(longAddress);
+		//BigInteger _bi = BigInteger.valueOf(longAddress);
+		BigInteger _bi = new BigInteger(1,Utils.longToByteArray(longAddress));
 		synchronized (getListLocker()) {
 			for (ParserLocker pl : getListLocker()) {
 				if ((pl.getType() == TypeMessage.READ_IEEE_ADDRESS) && (pl.getStatus().getCode() == ParserLocker.INVALID_ID) && (pl.get_Key().equalsIgnoreCase(Key))) {
@@ -1320,9 +1325,9 @@ public class DataFreescale implements IDataLayer {
 	 */
 	private void ztcReadExtAddrConfirm(ByteArrayObject message) {
 		LOG.debug("Extracted ZTC-ReadExtAddr.Confirm: {}", message.ToHexString());
-		long longAddress = DataManipulation.toLong(message.getArray()[11], message.getArray()[10], message.getArray()[9], message.getArray()[8], message.getArray()[7],
-				message.getArray()[6], message.getArray()[5], message.getArray()[4]);
-		BigInteger _bi = BigInteger.valueOf(longAddress);
+		long longAddress = DataManipulation.toLong(message.getArray()[11], message.getArray()[10], message.getArray()[9], message.getArray()[8], message.getArray()[7], message.getArray()[6], message.getArray()[5], message.getArray()[4]);
+		//BigInteger _bi = BigInteger.valueOf(longAddress);
+		BigInteger _bi = new BigInteger(1,Utils.longToByteArray(longAddress));
 		synchronized (getListLocker()) {
 			for (ParserLocker pl : getListLocker()) {
 				if ((pl.getType() == TypeMessage.READ_EXT_ADDRESS) && (pl.getStatus().getCode() == ParserLocker.INVALID_ID)) {
@@ -1398,7 +1403,8 @@ public class DataFreescale implements IDataLayer {
 										message.getArray()[_index + 13]);
 
 								short _dstEP = (short) (message.getArray()[_index + 21] & 0xFF);
-								_dev.setAddress(BigInteger.valueOf(dst_longAddress));
+								//_dev.setAddress(BigInteger.valueOf(dst_longAddress));
+								_dev.setAddress(new BigInteger(1,Utils.longToByteArray(dst_longAddress)));
 								_dev.setEndpoint(_dstEP);
 								_index = _index + 21;
 							} else if (_DestinationMode == 0x01) {
@@ -1409,8 +1415,8 @@ public class DataFreescale implements IDataLayer {
 							}
 							_b.setClusterID(_cluster);
 							_b.setSourceEndpoint(_srcEP);
-							_b.setSourceIEEEAddress(BigInteger.valueOf(src_longAddress));
-
+							//_b.setSourceIEEEAddress(BigInteger.valueOf(src_longAddress));
+							_b.setSourceIEEEAddress(new BigInteger(1,Utils.longToByteArray(src_longAddress)));
 							_b.getDeviceDestination().add(_dev);
 							_res.getBinding().add(_b);
 
@@ -2076,33 +2082,19 @@ public class DataFreescale implements IDataLayer {
 
 				if (node != null)
 					synchronized (node) {
-						try {
-							if (node.get_node().getAddress().getIeeeAddress() != null) {
-								messageEvent.getSourceAddress().setIeeeAddress(BigInteger.valueOf(node.get_node().getAddress().getIeeeAddress().longValue()));
-							} else {
-								LOG.error("IEEEAddress was null in node object. SuourceAddressMode was: {}", messageEvent.getSourceAddressMode());
-							}
-							if (node.get_node().getAddress().getNetworkAddress() != null) {
-								messageEvent.getSourceAddress().setNetworkAddress(new Integer(node.get_node().getAddress().getNetworkAddress()));
-							} else {
-								LOG.error("NetworkAddress was null in node object. SuourceAddressMode was: {}", messageEvent.getSourceAddressMode());
-							}
-						} catch (Exception e) {
-							LOG.error("Error setting source address ( mode {} ) details to messageEvent", messageEvent.getSourceAddressMode(), e);
-						}
+						messageEvent.getSourceAddress().setIeeeAddress(new BigInteger(1,Utils.longToByteArray(node.get_node().getAddress().getIeeeAddress().longValue())));
+						messageEvent.getSourceAddress().setNetworkAddress(new Integer(node.get_node().getAddress().getNetworkAddress()));
 					}
 				else
 					return;
 
 				if (messageEvent.getSourceAddress().getIeeeAddress() == null) {
-					LOG.error("Message discarded IEEE source address not found for Short address:" + String.format("%04X", messageEvent.getSourceAddress().getNetworkAddress())
-							+ " -- ProfileID: " + String.format("%04X", messageEvent.getProfileID()) + " -- ClusterID: " + String.format("%04X", messageEvent.getClusterID()));
+					LOG.error("Message discarded IEEE source address not found for Short address:" + String.format("%04X", messageEvent.getSourceAddress().getNetworkAddress()) + " -- ProfileID: " + String.format("%04X", messageEvent.getProfileID()) + " -- ClusterID: " + String.format("%04X", messageEvent.getClusterID()));
 					return;
 				}
 
 				if (messageEvent.getSourceAddress().getNetworkAddress() == null) {
-					LOG.error("Message discarded short source address not found for Ieee address:" + String.format("%16X", messageEvent.getSourceAddress().getIeeeAddress())
-							+ " -- ProfileID: " + String.format("%04X", messageEvent.getProfileID()) + " -- ClusterID: " + String.format("%04X", messageEvent.getClusterID()));
+					LOG.error("Message discarded short source address not found for Ieee address:" + String.format("%16X", messageEvent.getSourceAddress().getIeeeAddress()) + " -- ProfileID: " + String.format("%04X", messageEvent.getProfileID()) + " -- ClusterID: " + String.format("%04X", messageEvent.getClusterID()));
 					return;
 				}
 
@@ -2116,8 +2108,7 @@ public class DataFreescale implements IDataLayer {
 			if (messageEvent.getClusterID() == 0x8031) {
 				Mgmt_LQI_rsp _res = new Mgmt_LQI_rsp(messageEvent.getData());
 				String __key = String.format("%04X%02X", messageEvent.getSourceAddress().getNetworkAddress(), _res._StartIndex);
-				LOG.debug("Received LQI_RSP from node: {} --Index: {}", String.format("%04X", messageEvent.getSourceAddress().getNetworkAddress()),
-						String.format("%02X", _res._StartIndex));
+				LOG.debug("Received LQI_RSP from node: {} --Index: {}",String.format("%04X", messageEvent.getSourceAddress().getNetworkAddress()) , String.format("%02X", _res._StartIndex));
 				synchronized (getListLocker()) {
 					for (ParserLocker pl : getListLocker()) {
 						if ((pl.getType() == TypeMessage.LQI_REQ) && (pl.getStatus().getCode() == ParserLocker.INVALID_ID) && (__key.equalsIgnoreCase(pl.get_Key()))) {
@@ -2210,7 +2201,7 @@ public class DataFreescale implements IDataLayer {
 							Wrapnode.reset_numberOfAttempt();
 							Wrapnode.setTimerFreshness(getGal().getPropertiesManager().getKeepAliveThreshold());
 							LOG.debug("Postponing  timer Freshness for Aps.Indication for node: {}", String.format("%04X", Wrapnode.get_node().getAddress().getNetworkAddress()));
-
+							
 						}
 
 					}
@@ -2383,9 +2374,10 @@ public class DataFreescale implements IDataLayer {
 		return toReturn;
 	}
 
-	public void SendRs232Data(final ByteArrayObject toAdd) throws Exception {
-		getIKeyInstance().write(toAdd);
-
+	public void SendRs232Data(final ByteArrayObject toAdd) throws Exception 
+	{
+		// getIKeyInstance().write(toAdd);
+		RS232Filter.getInstance().write(toAdd);
 	}
 
 	public ByteArrayObject Set_SequenceStart_And_FSC(ByteArrayObject x, short commandCode) {
@@ -2403,6 +2395,7 @@ public class DataFreescale implements IDataLayer {
 		return x;
 	}
 
+	// Set an APS information base (AIB) attribute. 
 	public Status APSME_SETSync(long timeout, short _AttID, String _value) throws GatewayException, Exception {
 		ByteArrayObject _res = new ByteArrayObject(false);
 		_res.addByte((byte) _AttID);/* _AttId */
@@ -2412,7 +2405,7 @@ public class DataFreescale implements IDataLayer {
 		for (byte x : DataManipulation.hexStringToByteArray(_value))
 			_res.addByte(x);
 		_res = Set_SequenceStart_And_FSC(_res, FreescaleConstants.APSMESetRequest);
-
+		
 		LOG.debug("APSME_SET command: {}", _res.ToHexString());
 		ParserLocker lock = new ParserLocker();
 		lock.setType(TypeMessage.APSME_SET);
@@ -2442,6 +2435,7 @@ public class DataFreescale implements IDataLayer {
 
 	}
 
+	// Get APS information base (AIB) attributes.
 	public String APSME_GETSync(long timeout, short _AttID) throws Exception {
 		ByteArrayObject _res = new ByteArrayObject(false);
 		_res.addByte((byte) _AttID);/* iId */
@@ -2486,6 +2480,8 @@ public class DataFreescale implements IDataLayer {
 
 	}
 
+	
+	// Get network information base Attributes.
 	public String NMLE_GetSync(long timeout, short _AttID, short iEntry) throws Exception {
 		ByteArrayObject _res = new ByteArrayObject(false);
 		_res.addByte((byte) _AttID);/* iId */
@@ -2498,6 +2494,7 @@ public class DataFreescale implements IDataLayer {
 																				 * Control
 																				 */
 		LOG.debug("NLME-GET.Request: {}", _res.ToHexString());
+
 
 		ParserLocker lock = new ParserLocker();
 		lock.setType(TypeMessage.NMLE_GET);
@@ -2531,6 +2528,7 @@ public class DataFreescale implements IDataLayer {
 
 	}
 
+	
 	public Status stopNetworkSync(long timeout) throws Exception, GatewayException {
 		ByteArrayObject _res = new ByteArrayObject(false);
 		_res.addByte((byte) 0x01);/*
@@ -2583,20 +2581,27 @@ public class DataFreescale implements IDataLayer {
 
 	}
 
+	// Send a message to Freescale.
 	public Status sendApsSync(long timeout, APSMessage message) throws Exception {
-
+		
 		LOG.debug("Data_FreeScale.send_aps");
 		// ParserLocker lock = new ParserLocker();
 		// lock.setType(TypeMessage.APS);
 		/* DestAddress + DestEndPoint + SourceEndPoint */
 		BigInteger _DSTAdd = null;
-		if ((message.getDestinationAddressMode() == GatewayConstants.EXTENDED_ADDRESS_MODE))
-			_DSTAdd = message.getDestinationAddress().getIeeeAddress();
+		if ((message.getDestinationAddressMode() == GatewayConstants.EXTENDED_ADDRESS_MODE)){
+			// _Bruno_
+			// _DSTAdd = message.getDestinationAddress().getIeeeAddress();
+			_DSTAdd = new BigInteger(1,Utils.longToByteArray(message.getDestinationAddress().getIeeeAddress().longValue()));
+		}
 		else if ((message.getDestinationAddressMode() == GatewayConstants.ADDRESS_MODE_SHORT))
 			_DSTAdd = BigInteger.valueOf(message.getDestinationAddress().getNetworkAddress());
 		else if (((message.getDestinationAddressMode() == GatewayConstants.ADDRESS_MODE_ALIAS)))
 			throw new Exception("The DestinationAddressMode == ADDRESS_MODE_ALIAS is not implemented!!");
 		if (_DSTAdd != null) {
+			
+			LOG.debug("Data_FreeScale.send_aps - Destination Address: " + _DSTAdd.toString(16));
+			
 			// String _key = String.format("%016X", _DSTAdd.longValue()) +
 			// String.format("%02X", message.getDestinationEndpoint()) +
 			// String.format("%02X", message.getSourceEndpoint());
@@ -2651,6 +2656,7 @@ public class DataFreescale implements IDataLayer {
 		}
 	}
 
+	
 	public short configureEndPointSync(long timeout, SimpleDescriptor desc) throws IOException, Exception, GatewayException {
 		ByteArrayObject _res = new ByteArrayObject(false);
 		_res.addByte(desc.getEndPoint().byteValue());/* End Point */
@@ -2714,6 +2720,8 @@ public class DataFreescale implements IDataLayer {
 		byte dam = apsMessage.getDestinationAddressMode().byteValue();
 		_res.addByte(dam);
 		Address address = apsMessage.getDestinationAddress();
+		
+		
 		byte[] _reversed = null;
 		switch (dam) {
 		case GatewayConstants.ADDRESS_MODE_SHORT:
@@ -2723,7 +2731,7 @@ public class DataFreescale implements IDataLayer {
 				_res.addByte(b);
 			break;
 		case GatewayConstants.EXTENDED_ADDRESS_MODE:
-			byte[] ieeeAddress = DataManipulation.toByteVect(address.getIeeeAddress(), 8);
+			byte[] ieeeAddress = DataManipulation.toByteVect(address.getIeeeAddress(), 8);	
 			_reversed = DataManipulation.reverseBytes(ieeeAddress);
 			for (byte b : _reversed)
 				_res.addByte(b);
@@ -2831,6 +2839,7 @@ public class DataFreescale implements IDataLayer {
 		return _res;
 	}
 
+	
 	public Status SetModeSelectSync(long timeout) throws IOException, Exception, GatewayException {
 		ByteArrayObject _res = new ByteArrayObject(false);
 		_res.addByte((byte) 0x01);/* UART Tx Blocking */
@@ -2875,6 +2884,7 @@ public class DataFreescale implements IDataLayer {
 		return status;
 	}
 
+	
 	public Status startGatewayDeviceSync(long timeout, StartupAttributeInfo sai) throws IOException, Exception, GatewayException {
 		Status _statWriteSas = WriteSasSync(timeout, sai);
 		if (_statWriteSas.getCode() == 0) {
@@ -2961,6 +2971,7 @@ public class DataFreescale implements IDataLayer {
 		byte[] ExtendedPaniId = DataManipulation.toByteVect(sai.getExtendedPANId(), 8);
 		LOG.debug("Extended PanID: {}", DataManipulation.convertBytesToString(ExtendedPaniId));
 
+
 		for (byte b : DataManipulation.reverseBytes(ExtendedPaniId))
 			res.addByte(b);
 
@@ -2994,7 +3005,7 @@ public class DataFreescale implements IDataLayer {
 		/* TrustCenterMasterKey */
 		byte[] TrustCenterMasterKey = (devType == LogicalType.COORDINATOR) ? sai.getTrustCenterMasterKey() : DataManipulation.toByteVect(BigInteger.ZERO, 16);
 		LOG.debug("TrustCenterMasterKey: {}", DataManipulation.convertBytesToString(TrustCenterMasterKey));
-
+		
 		for (byte b : DataManipulation.reverseBytes(TrustCenterMasterKey))
 			res.addByte(b);
 
@@ -3037,8 +3048,8 @@ public class DataFreescale implements IDataLayer {
 		res.addByte(sai.getConcentratorDiscoveryTime().byteValue());
 
 		res = Set_SequenceStart_And_FSC(res, FreescaleConstants.BlackBoxWriteSAS);
-
-		LOG.debug("WriteSas Command: {} --Timeout: {}", res.ToHexString(), timeout);
+		
+		LOG.debug("WriteSas Command: {} --Timeout: {}",res.ToHexString() , timeout);
 
 		ParserLocker lock = new ParserLocker();
 		lock.setType(TypeMessage.WRITE_SAS);
@@ -3046,7 +3057,7 @@ public class DataFreescale implements IDataLayer {
 		getListLocker().add(lock);
 		SendRs232Data(res);
 		if (lock.getStatus().getCode() == ParserLocker.INVALID_ID) {
-
+			
 			LOG.debug("Waiting WriteSas confirm...");
 			lock.getObjectLocker().poll(timeout, TimeUnit.MILLISECONDS);
 			LOG.debug("Ended waiting WriteSas confirm!");
@@ -3068,6 +3079,7 @@ public class DataFreescale implements IDataLayer {
 		}
 	}
 
+	
 	public Status permitJoinSync(long timeout, Address addrOfInterest, short duration, byte TCSignificance) throws IOException, Exception, GatewayException {
 		ByteArrayObject _res = new ByteArrayObject(false);
 		_res.addBytesShort(Short.reverseBytes(addrOfInterest.getNetworkAddress().shortValue()), 2);/*
@@ -3109,6 +3121,7 @@ public class DataFreescale implements IDataLayer {
 		return status;
 	}
 
+	
 	public Status permitJoinAllSync(long timeout, Address addrOfInterest, short duration, byte TCSignificance) throws IOException, Exception {
 		ByteArrayObject _res = new ByteArrayObject(false);
 		_res.addBytesShort(Short.reverseBytes(addrOfInterest.getNetworkAddress().shortValue()), 2);/*
@@ -3132,6 +3145,7 @@ public class DataFreescale implements IDataLayer {
 		return status;
 	}
 
+	
 	public short getChannelSync(long timeout) throws IOException, Exception, GatewayException {
 		ByteArrayObject _res = new ByteArrayObject(false);
 		_res = Set_SequenceStart_And_FSC(_res, FreescaleConstants.ZTCGetChannelRequest);// StartSequence
@@ -3167,6 +3181,7 @@ public class DataFreescale implements IDataLayer {
 		}
 	}
 
+	
 	public BigInteger readExtAddressGal(long timeout) throws GatewayException, Exception {
 		ByteArrayObject _res = new ByteArrayObject(false);
 		_res = Set_SequenceStart_And_FSC(_res, FreescaleConstants.ZTCReadExtAddrRequest);// StartSequence
@@ -3196,7 +3211,7 @@ public class DataFreescale implements IDataLayer {
 			throw new GatewayException("Timeout expired in ZTC-ReadExtAddr.Request");
 		} else {
 			if (status.getCode() != 0) {
-
+				
 				LOG.debug("Returned Status: {}", status.getCode());
 				throw new GatewayException("Error on ZTC-ReadExtAddr.Request. Status code:" + status.getCode() + " Status Message: " + status.getMessage());
 			} else
@@ -3214,6 +3229,8 @@ public class DataFreescale implements IDataLayer {
 		// +
 		// Control
 		LOG.info("ZDP-IEEE_addr.Request.Request: {}", _res.ToHexString());
+
+		
 
 		ParserLocker lock = new ParserLocker();
 		String Key = String.format("%04X", shortAddress);
@@ -3246,6 +3263,7 @@ public class DataFreescale implements IDataLayer {
 		}
 	}
 
+	
 	public NodeDescriptor getNodeDescriptorSync(long timeout, Address addrOfInterest) throws IOException, Exception, GatewayException {
 
 		ByteArrayObject _res = new ByteArrayObject(false);
@@ -3270,9 +3288,9 @@ public class DataFreescale implements IDataLayer {
 		lock.setType(TypeMessage.NODE_DESCRIPTOR);
 		String __Key = String.format("%04X", addrOfInterest.getNetworkAddress());
 		lock.set_Key(__Key);
-
+		
 		LOG.debug("ZDP-NodeDescriptor.Request: {} -- Key: {}", _res.ToHexString(), __Key);
-
+		
 		Status status = new Status();
 
 		getListLocker().add(lock);
@@ -3300,6 +3318,7 @@ public class DataFreescale implements IDataLayer {
 		}
 	}
 
+	
 	public List<Short> startServiceDiscoverySync(long timeout, Address aoi) throws Exception {
 		LOG.debug("startServiceDiscoverySync Timeout: {}", timeout);
 		ByteArrayObject _res = new ByteArrayObject(false);
@@ -3318,7 +3337,7 @@ public class DataFreescale implements IDataLayer {
 																					 * +
 																					 * Control
 																					 */
-
+		
 		LOG.debug("ZDP-Active_EP_req.Request: {}", _res.ToHexString());
 
 		ParserLocker lock = new ParserLocker();
@@ -3352,6 +3371,7 @@ public class DataFreescale implements IDataLayer {
 
 	}
 
+	
 	public Status leaveSync(long timeout, Address addrOfInterest, int mask) throws Exception {
 		ByteArrayObject _res = new ByteArrayObject(false);
 
@@ -3395,6 +3415,7 @@ public class DataFreescale implements IDataLayer {
 		return status;
 	}
 
+	
 	public Status clearEndpointSync(long timeout, short endpoint) throws IOException, Exception, GatewayException {
 		ByteArrayObject _res = new ByteArrayObject(false);
 		_res.addByte((byte) endpoint);/* EndPoint */
@@ -3425,13 +3446,14 @@ public class DataFreescale implements IDataLayer {
 		} else {
 			if (status.getCode() != 0) {
 				LOG.info("Returned Status: {}", status.getCode());
-
+				
 				throw new GatewayException("Error on  APS-DeregisterEndPoint.Request. Status code:" + status.getCode() + " Status Message: " + status.getMessage());
 			} else
 				return status;
 		}
 	}
 
+	
 	public NodeServices getLocalServices(long timeout) throws IOException, Exception, GatewayException {
 		ByteArrayObject _res = new ByteArrayObject(false);
 		_res = Set_SequenceStart_And_FSC(_res, FreescaleConstants.APSGetEndPointIdListRequest);/*
@@ -3446,6 +3468,7 @@ public class DataFreescale implements IDataLayer {
 
 		getListLocker().add(lock);
 
+		
 		LOG.debug("APS-GetEndPointIdList.Request command: {}", _res.ToHexString());
 		SendRs232Data(_res);
 		if (lock.getStatus().getCode() == ParserLocker.INVALID_ID)
@@ -3463,7 +3486,7 @@ public class DataFreescale implements IDataLayer {
 		} else {
 			if (status.getCode() != 0) {
 				LOG.debug("Returned Status: {}", status.getCode());
-
+				
 				throw new GatewayException("Error on APS-GetEndPointIdList.Request. Status code:" + status.getCode() + " Status Message: " + status.getMessage());
 			} else {
 				NodeServices _tores = (NodeServices) lock.get_objectOfResponse();
@@ -3480,7 +3503,7 @@ public class DataFreescale implements IDataLayer {
 	 * org.energy_home.jemma.javagetGal().layers.data.interfaces.IDataLayer#
 	 * getServiceDescriptor(long, it.telecomitalia.zgd.jaxb.Address, short)
 	 */
-
+	
 	public ServiceDescriptor getServiceDescriptor(long timeout, Address addrOfInterest, short endpoint) throws IOException, Exception, GatewayException {
 		ByteArrayObject _res = new ByteArrayObject(false);
 
@@ -3493,8 +3516,8 @@ public class DataFreescale implements IDataLayer {
 																							 * Control
 																							 */
 		String Key = String.format("%04X", addrOfInterest.getNetworkAddress()) + String.format("%02X", endpoint);
-		LOG.debug("ZDP-SimpleDescriptor.Request command: {}", _res.ToHexString());
-
+		LOG.debug("ZDP-SimpleDescriptor.Request command: {}",  _res.ToHexString());
+		
 		ParserLocker lock = new ParserLocker();
 		lock.setType(TypeMessage.GET_SIMPLE_DESCRIPTOR);
 		lock.set_Key(Key);
@@ -3527,6 +3550,7 @@ public class DataFreescale implements IDataLayer {
 		}
 	}
 
+	
 	public void clearBuffer() {
 		try {
 			getDataFromSerialComm().put(new ByteArrayObject(null, 0));
@@ -3537,6 +3561,7 @@ public class DataFreescale implements IDataLayer {
 
 	}
 
+	
 	public void cpuReset() throws Exception {
 		ByteArrayObject _res = new ByteArrayObject(false);
 		_res = Set_SequenceStart_And_FSC(_res, FreescaleConstants.ZTCCPUResetRequest);/*
@@ -3550,6 +3575,7 @@ public class DataFreescale implements IDataLayer {
 
 	}
 
+	
 	public BindingList getNodeBindings(long timeout, Address addrOfInterest, short index) throws IOException, Exception, GatewayException {
 		ByteArrayObject _res = new ByteArrayObject(false);
 		_res.addBytesShort(Short.reverseBytes(addrOfInterest.getNetworkAddress().shortValue()), 2);/* ShortNetworkAddress */
@@ -3590,6 +3616,7 @@ public class DataFreescale implements IDataLayer {
 		}
 	}
 
+	
 	public Status addBinding(long timeout, Binding binding, Address aoi) throws IOException, Exception, GatewayException {
 		byte[] _reversed;
 
@@ -3664,7 +3691,7 @@ public class DataFreescale implements IDataLayer {
 			throw new GatewayException("Timeout expired in ZDP-BIND.Request");
 		} else {
 			if (status.getCode() != 0) {
-				LOG.debug("Returned Status: {}", status.getCode());
+				LOG.debug("Returned Status: {}",status.getCode());
 
 				throw new GatewayException("Error on ZDP-BIND.Request. Status code:" + status.getCode() + " Status Message: " + status.getMessage());
 			} else {
@@ -3674,6 +3701,7 @@ public class DataFreescale implements IDataLayer {
 		}
 	}
 
+	
 	public Status removeBinding(long timeout, Binding binding, Address aoi) throws IOException, Exception, GatewayException {
 		byte[] _reversed;
 
@@ -3760,6 +3788,7 @@ public class DataFreescale implements IDataLayer {
 		}
 	}
 
+	
 	public Status frequencyAgilitySync(long timeout, short scanChannel, short scanDuration) throws IOException, Exception, GatewayException {
 		ByteArrayObject _bodyCommand = new ByteArrayObject(false);
 		_bodyCommand.addByte((byte) 0xFD);
@@ -3783,14 +3812,17 @@ public class DataFreescale implements IDataLayer {
 		return _st;
 	}
 
+	
 	public IConnector getIKeyInstance() {
 		return dongleRs232;
 	}
 
+	
 	public PropertiesManager getPropertiesManager() {
 		return getGal().getPropertiesManager();
 	}
 
+	
 	public void notifyFrame(final ByteArrayObject frame) {
 		if (getGal().getPropertiesManager().getserialDataDebugEnabled())
 			LOG.debug("<<< Received data:" + frame.ToHexString());
@@ -3801,6 +3833,7 @@ public class DataFreescale implements IDataLayer {
 		}
 	}
 
+	
 	public Status ClearDeviceKeyPairSet(long timeout, Address addrOfInterest) throws IOException, Exception, GatewayException {
 		ByteArrayObject _res = new ByteArrayObject(false);
 		byte[] ieeeAddress = DataManipulation.toByteVect(addrOfInterest.getIeeeAddress(), 8);
@@ -3841,6 +3874,7 @@ public class DataFreescale implements IDataLayer {
 
 	}
 
+	
 	public Status ClearNeighborTableEntry(long timeout, Address addrOfInterest) throws IOException, Exception, GatewayException {
 		ByteArrayObject _res = new ByteArrayObject(false);
 		_res.addByte((byte) 0xFF);
@@ -3883,6 +3917,7 @@ public class DataFreescale implements IDataLayer {
 		}
 	}
 
+	
 	public Status NMLE_SETSync(long timeout, short _AttID, String _value) throws Exception {
 		ByteArrayObject _res = new ByteArrayObject(false);
 		_res.addByte((byte) _AttID);/* _AttId */
@@ -3924,6 +3959,7 @@ public class DataFreescale implements IDataLayer {
 		}
 	}
 
+	
 	public Mgmt_LQI_rsp Mgmt_Lqi_Request(long timeout, Address addrOfInterest, short startIndex) throws IOException, Exception, GatewayException {
 		ByteArrayObject _res = new ByteArrayObject(false);
 		_res.addBytesShort(Short.reverseBytes(addrOfInterest.getNetworkAddress().shortValue()), 2);
@@ -3931,6 +3967,10 @@ public class DataFreescale implements IDataLayer {
 		_res = Set_SequenceStart_And_FSC(_res, FreescaleConstants.ZDPMgmtLqiRequest);
 		LOG.debug("Mgmt_Lqi_Request command: {}", _res.ToHexString());
 
+		// In case of a device different from the coordinator, we increase the timeout ...
+		if(addrOfInterest.getNetworkAddress().shortValue() != 0)
+			timeout *= 10;
+		
 		String __Key = String.format("%04X%02X", addrOfInterest.getNetworkAddress(), startIndex);
 		ParserLocker lock = new ParserLocker();
 		lock.setType(TypeMessage.LQI_REQ);
@@ -3958,6 +3998,7 @@ public class DataFreescale implements IDataLayer {
 		}
 	}
 
+	
 	public Status sendInterPANMessaSync(long timeout, InterPANMessage message) throws Exception {
 		LOG.debug("Data_FreeScale.send_InterPAN");
 
@@ -4000,6 +4041,7 @@ public class DataFreescale implements IDataLayer {
 		}
 	}
 
+	
 	public void destroy() {
 		synchronized (destroy) {
 			destroy = true;
@@ -4007,12 +4049,14 @@ public class DataFreescale implements IDataLayer {
 		clearBuffer();
 	}
 
+	
 	public boolean getDestroy() {
 		synchronized (destroy) {
 			return destroy;
 		}
 	}
 
+	
 	public String MacGetPIBAttributeSync(long timeout, short _AttID) throws Exception {
 
 		ByteArrayObject _res = new ByteArrayObject(false);
